--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -32,7 +32,7 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/bac
 
 # >机场订阅
 [Remote Proxy]
-iQZone = https://gist.githubusercontent.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
+iQZone = https://gist.githubusercontent.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Telecom.png
 
 # >策略组
 [Proxy Group]
@@ -106,6 +106,7 @@ https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Location.plugin
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Siri.plugin, tag=🔍Siri与搜索, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/TV.plugin, tag=📺TV, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/News.plugin, tag=📰News, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/VirgilClyne/main/modules/DNS/DNS.plugin, tag=🌐DNS, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Loon-Gallery/master/loon-gallery.plugin, tag=🎈Gallery, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJS, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Sub-Store订阅, enabled=true
