--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -74,7 +74,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/ChinaMax/ChinaMax.list, policy=DIRECT, tag=🎯 ChinaMax, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/ChinaMax/ChinaMax_Domain.list, policy=DIRECT, tag=🎯 ChinaMax_Domain, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=🎯 中国IP-直连, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/WeChat/WeChat.list.list, policy=DIRECT, tag=💬 微信-直连, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=💬 微信-直连, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest-直连, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Apple/Apple.list, policy=DIRECT, tag=🍎 Apple, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/AppleNews/AppleNews.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
