--- a/quantumultX_diy.conf
+++ b/quantumultX_diy.conf
@@ -14,9 +14,16 @@ excluded_routes=192.168.0.0/16, 10.0.0.0/8, 127.0.0.0/8, 172.16.0.0/12, 100.64.0
 #running_mode_trigger=filter, filter, ysf:all_direct, ysf-5G: all_direct
 
 [dns]
-no-ipv6
+no-system
+server=1.1.1.1
+server=8.8.8.8
+server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
+
+doh-server=https://dns.alidns.com/dns-query
+#doh-server=https://cloudflare-dns.com/dns-query
+#doh-server=https://dns.google/dns-query
 
 [policy]
 # 默认设置10分钟测速一次，当前使用节点延迟和最新测速延迟最低的节点相差100ms以上则切换为最新的最低延迟节点，否则继续延用节点
