--- a/quantumultX_diy.conf
+++ b/quantumultX_diy.conf
@@ -27,16 +27,16 @@ doh-server=https://dns.alidns.com/dns-query
 
 [policy]
 # 默认设置10分钟测速一次，当前使用节点延迟和最新测速延迟最低的节点相差100ms以上则切换为最新的最低延迟节点，否则继续延用节点
-url-latency-benchmark=♻️ 自动选择, server-tag-regex=.*, check-interval=1800, tolerance=50, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
+url-latency-benchmark=♻️ 自动选择, server-tag-regex=.*, check-interval=1800, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
 static=🌍 Global, ♻️ 自动选择, ,resource-tag-regex=香港|HK|台湾|TW, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 static=🍎 Apple, ♻️ 自动选择, resource-tag-regex=美国|US, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 static=📟 Telegram,♻️ 自动选择,resource-tag-regex=新加坡|SG, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
 static=💰 PayPal, ♻️ 自动选择, resource-tag-regex=美国|US, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 static=🦈 漏网之鱼, ♻️ 自动选择, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
-url-latency-benchmark=🇭🇰 香港, server-tag-regex=(?=.*(香港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城|游戏)).)*$, check-interval=600, tolerance=50, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
-url-latency-benchmark=🇺🇸 美国, server-tag-regex=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城|游戏)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
-url-latency-benchmark=🇨🇳 台湾, server-tag-regex=(?=.*(台湾|TW|(?i)Taiwan))^((?!(香港|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|HK|美國|韓國|獅城|游戏)).)*$, check-interval=600, tolerance=50, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
-url-latency-benchmark=🇸🇬 新加坡, server-tag-regex=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國|游戏)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+url-latency-benchmark=🇭🇰 香港, server-tag-regex=香港|HK, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+url-latency-benchmark=🇺🇸 美国, server-tag-regex=美国|US, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+url-latency-benchmark=🇨🇳 台湾, server-tag-regex=台湾|TW, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
+url-latency-benchmark=🇸🇬 新加坡, server-tag-regex=新加坡|狮城|SG|Singapore, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
 
 [server_remote]
 https://gist.githubusercontent.com/yishangfei/, tag=iQZone, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png, update-interval=172800, opt-parser=true, enabled=true
