--- a/quantumultX_diy.conf
+++ b/quantumultX_diy.conf
@@ -28,10 +28,10 @@ doh-server=https://dns.alidns.com/dns-query
 [policy]
 # 默认设置10分钟测速一次，当前使用节点延迟和最新测速延迟最低的节点相差100ms以上则切换为最新的最低延迟节点，否则继续延用节点
 url-latency-benchmark=♻️ 自动选择, server-tag-regex=.*, check-interval=1800, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
-static=🌍 Global, ♻️ 自动选择, ,resource-tag-regex=香港|HK|台湾|TW, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
-static=🍎 Apple, ♻️ 自动选择, resource-tag-regex=美国|US, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-static=📟 Telegram,♻️ 自动选择,resource-tag-regex=新加坡|SG, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
-static=💰 PayPal, ♻️ 自动选择, resource-tag-regex=美国|US, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
+static=🌍 Global, ♻️ 自动选择, 🇭🇰 香港, 🇨🇳 台湾, proxy,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+static=🍎 Apple, ♻️ 自动选择, 🇺🇸 美国, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+static=📟 Telegram,♻️ 自动选择,🇸🇬 新加坡, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
+static=💰 PayPal, ♻️ 自动选择, 🇺🇸 美国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 static=🦈 漏网之鱼, ♻️ 自动选择, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 url-latency-benchmark=🇭🇰 香港, server-tag-regex=香港|HK, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
 url-latency-benchmark=🇺🇸 美国, server-tag-regex=美国|US, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
