--- a/quantumultX_diy.conf
+++ b/quantumultX_diy.conf
@@ -33,12 +33,12 @@ static=Apple, 自动选择, 美国, proxy, direct, img-url=https://raw.githubuse
 static=Telegram, 自动选择, 新加坡, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
 static=PayPal, 自动选择, 美国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 static=漏网之鱼, 自动选择, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
-available=香港, server-tag-regex=香港|HK, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
-available=台湾, server-tag-regex=台湾|TW, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
-available=美国, server-tag-regex=美国|US, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
-available=日韩, server-tag-regex=日本|韩国, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-available=新加坡, server-tag-regex=新加坡|SG, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
-available=东南亚, server-tag-regex=马来|泰国|越南|印度, check-interval=600, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_Nations.png
+available=香港, server-tag-regex=香港|HK, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+available=台湾, server-tag-regex=台湾|TW, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
+available=美国, server-tag-regex=美国|US, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+available=日韩, server-tag-regex=日本|韩国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+available=新加坡, server-tag-regex=新加坡|SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+available=东南亚, server-tag-regex=马来|泰国|越南|印度, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_Nations.png
 
 [server_remote]
 https://gist.githubusercontent.com/yishangfei/, tag=iQZone, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png, update-interval=172800, opt-parser=true, enabled=true
