--- a/quantumultX_diy.conf
+++ b/quantumultX_diy.conf
@@ -80,7 +80,7 @@ https://raw.githubusercontent.com/yishangfei/Profiles/master/Quantumult/Rewrite/
 
 [filter_local]
 GEOIP,CN,DIRECT
-FINAL,🦈 漏网之鱼
+FINAL,漏网之鱼
 
 [server_local]
 
