--- a/quantumultX_diy.conf
+++ b/quantumultX_diy.conf
@@ -9,11 +9,11 @@ resource_parser_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/mast
 server_check_url=http://www.gstatic.com/generate_204
 # 下列表中的内容将不经过 QuantumultX的处理
 excluded_routes=192.168.0.0/16, 10.0.0.0/8, 127.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, 224.0.0.0/4
-#第一个filter为4g模式开启规则分流，第二个filter为其他wifi下开启规则分流，第三个wifi1修改成你路由器翻墙的wifi名开启直连模式，第四个wifi2为你公司或者其他有路由器翻墙的WiFi名走直连）
 #默认关闭根据wifi切换模式，如需开启，删除下方的“#”即可！
-#running_mode_trigger=filter, filter, ysf:all_direct, ysf-5G: all_direct
+# running_mode_trigger=filter, filter, ysf:all_direct, ysf-5G: all_direct
 
 [dns]
+no-ipv6
 no-system
 server=1.1.1.1
 server=8.8.8.8
@@ -21,9 +21,11 @@ server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
 
-doh-server=https://dns.alidns.com/dns-query
-#doh-server=https://cloudflare-dns.com/dns-query
-#doh-server=https://dns.google/dns-query
+# 如指定 doh 服务，则👆️上面的一般 dns 解析均失效 额外参数，在特定网络下禁用该 doh
+doh-server= https://dns.alidns.com/dns-query,https://cloudflare-dns.com/dns-query,https://dns.google/dns-query,https://i.passcloud.xyz/dns-query
+
+# 如指定了 DoQ 服务，则 DoH 以及其它 dns解析均失效
+doq-server = quic://i.passcloud.xyz:784,quic://c.passcloud.xyz:784,quic://x.passcloud.xyz:784
 
 [server_remote]
 https://gist.githubusercontent.com/yishangfei/, tag=iQZone, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png, update-interval=172800, opt-parser=true, enabled=true
