--- a/quantumultX_diy.conf
+++ b/quantumultX_diy.conf
@@ -33,7 +33,7 @@ https://gist.githubusercontent.com/yishangfei/, tag=iQZone, img-url=https://raw.
 [policy]
 # 默认设置10分钟测速一次，当前使用节点延迟和最新测速延迟最低的节点相差100ms以上则切换为最新的最低延迟节点，否则继续延用节点
 url-latency-benchmark=自动选择, server-tag-regex=.*, check-interval=1800, tolerance=30, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
-static=节点选择, 自动选择, 香港, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
+static=节点选择, 自动选择, server-tag-regex=香港|HK, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
 static=Global, 节点选择, 香港, 台湾, 东南亚,proxy,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 static=Apple, 节点选择, 美国, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 static=Telegram, 节点选择, 新加坡, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
