--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -5,6 +5,8 @@ dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://github.com/KOP-XIAO/QuantumultX/raw/master/Scripts/IP_API.js
 # 资源解析器
 resource_parser_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+#链接头像
+profile_img_url= https://raw.githubusercontent.com/ssfun/fileball-icons/main/icons/Alipan.png
 # Quantumult X 会对 server_check_url 指定的网址进行相应测试，以确认节点的可用性
 server_check_url=http://www.gstatic.com/generate_204
 # 下列表中的内容将不经过 QuantumultX的处理
