--- a/QuantumultX/Rewrite/General.conf
+++ b/QuantumultX/Rewrite/General.conf
@@ -6,6 +6,9 @@ hostname = www.google.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weix
 # Redirect Google Maps Service
 ^https?:\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
 
+# FileBall挂载阿里云盘
+^https?:\/\/.*\.example\.com url script-analyze-echo-response https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/ali.js
+
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/Wechat.js
 
