--- a/QuantumultX/Rewrite/General.conf
+++ b/QuantumultX/Rewrite/General.conf
@@ -1,4 +1,4 @@
-hostname = www.google.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.zhihu.com,spclient.wg.spotify.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, grpc.biliapi.net,api.biliapi.net, -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, api.aliyundrive.com, elemecdn.com, fuss10.elemecdn.com, m5.amap.com, bdsp-x.jd.com, dsp-x.jd.com, api.m.jd.com, ms.jr.jd.com, creditcardapp.bankcomm.com,img.meituan.net, www.meituan.com, s3plus.meituan.net,flowplus.meituan.net, p*.meituan.net, img.meituan.net, wmapi.meituan.com, api.jr.mi.com, api.m.mi.com, edith.xiaohongshu.com, pages.xiaohongshu.com,business.msstatic.com, mangaapi.manhuaren.com, api.gotokeep.com, api.kkmh.com, *.chelaile.net.cn, api-mifit.huami.com, api.jr.mi.com, api.m.mi.com, guanyu.longfor.com, pages.xiaohongshu.com, www.xiaohongshu.com, gw.alicdn.com
+hostname = www.google.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip.weibo.cn, mp.weixin.qq.com, api.zhihu.com,spclient.wg.spotify.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, grpc.biliapi.net,api.biliapi.net, -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, api.aliyundrive.com, elemecdn.com, fuss10.elemecdn.com, m5.amap.com, bdsp-x.jd.com, dsp-x.jd.com, api.m.jd.com, ms.jr.jd.com, creditcardapp.bankcomm.com,img.meituan.net, www.meituan.com, s3plus.meituan.net,flowplus.meituan.net, p*.meituan.net, img.meituan.net, wmapi.meituan.com, api.jr.mi.com, api.m.mi.com, edith.xiaohongshu.com, pages.xiaohongshu.com,business.msstatic.com, mangaapi.manhuaren.com, api.gotokeep.com, api.kkmh.com, *.chelaile.net.cn, api-mifit.huami.com, api.jr.mi.com, api.m.mi.com, guanyu.longfor.com, pages.xiaohongshu.com, www.xiaohongshu.com, gw.alicdn.com
 
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
@@ -12,9 +12,14 @@ hostname = www.google.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weix
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/Wechat.js
 
-# 去微博应用内广告 (yichahucha)
-^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/weibo_launch.js
-^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info|remind/unread_count) url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/weibo_ad.js
+# 微博去广告以及去除各部分推广模块 - cherish
+^https?://m?api\.weibo\.c(n|om)/2/(cardlist|searchall|page|messageflow|statuses/(unread_)?friends(/|_)timeline|groups/timeline|statuses/(container_timeline|unread_hot_timeline|extend|video_mixtimeline|unread_topic_timeline)|profile/(me|container_timeline)|video/(community_tab|remind_info|tiny_stream_video_list)|checkin/show|\!/live/media_homelist|comments/build_comments|container/get_item|search/(finder|container_timeline|container_discover)) url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/weibo_main.js
+# 删除微博开屏广告 - cherish
+^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/zmqcherish/proxy-script/main/weibo_launch.js
+# 自定义tab皮肤
+^https://api.weibo.cn/2/!/client/light_skin url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/weibo_main.js
+# 非会员设置tab皮肤 - cherish
+^https://new.vip.weibo.cn/littleskin/preview url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/weibo_main.js
 
 # 知乎去广告 (onewayticket255)
 https://api.zhihu.com/(ad|drama|fringe|commercial|market/popover|search/(top|preset|tab)|.*featured-comment-ad) url reject-200
