--- a/QuantumultX/Rewrite/General.conf
+++ b/QuantumultX/Rewrite/General.conf
@@ -1,4 +1,4 @@
-hostname = www.google.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip.weibo.cn, mp.weixin.qq.com, api.zhihu.com,spclient.wg.spotify.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, grpc.biliapi.net,api.biliapi.net, -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, api.aliyundrive.com, elemecdn.com, fuss10.elemecdn.com, m5.amap.com, bdsp-x.jd.com, dsp-x.jd.com, api.m.jd.com, ms.jr.jd.com, creditcardapp.bankcomm.com,img.meituan.net, www.meituan.com, s3plus.meituan.net,flowplus.meituan.net, p*.meituan.net, img.meituan.net, wmapi.meituan.com, api.jr.mi.com, api.m.mi.com, edith.xiaohongshu.com, pages.xiaohongshu.com,business.msstatic.com, mangaapi.manhuaren.com, api.gotokeep.com, api.kkmh.com, *.chelaile.net.cn, api-mifit.huami.com, api.jr.mi.com, api.m.mi.com, guanyu.longfor.com, pages.xiaohongshu.com, www.xiaohongshu.com, gw.alicdn.com
+hostname = www.google.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip.weibo.cn, api.zhihu.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, grpc.biliapi.net,api.biliapi.net, -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net
 
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
@@ -8,9 +8,6 @@ hostname = www.google.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip
 
 # FileBall挂载阿里云盘
 ^https?:\/\/.*\.example\.com url script-analyze-echo-response https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/ali.js
-
-# 去微信公众号广告 (By Choler)
-^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/Wechat.js
 
 # 微博去广告以及去除各部分推广模块 - cherish
 ^https?://m?api\.weibo\.c(n|om)/2/(cardlist|searchall|page|messageflow|statuses/(unread_)?friends(/|_)timeline|groups/timeline|statuses/(container_timeline|unread_hot_timeline|extend|video_mixtimeline|unread_topic_timeline)|profile/(me|container_timeline)|video/(community_tab|remind_info|tiny_stream_video_list)|checkin/show|\!/live/media_homelist|comments/build_comments|container/get_item|search/(finder|container_timeline|container_discover)) url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/weibo_main.js
@@ -70,59 +67,6 @@ https://api.zhihu.com/(ad|drama|fringe|commercial|market/popover|search/(top|pre
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/bilibili_json.js
 # ～ BiliBili_哔哩哔哩_Proto去广告@app2smile
 ^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/bilibili-proto.js
-
-#Spotify破解
-^https:\/\/spclient\.wg\.spotify\.com\/(bootstrap\/v1\/bootstrap|user-customization-service\/v1\/customize)$ url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/spotify.js
-
-# > 阿里云盘
-^https?:\/\/api\.aliyundrive\.com\/apps\/v\d\/users\/apps\/widgets$ url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/alidrive.js
-
-# > 饿了么
-^https?:\/\/elemecdn.com\/.+\/sitemap url reject
-^https?:\/\/fuss10.elemecdn.com\/.+\/w\/640\/h\/\d{3,4} url reject
-^https?:\/\/fuss10.elemecdn.com\/.+\/w\/750\/h\/\d{3,4} url reject
-^https?:\/\/fuss10.elemecdn.com\/.+.mp4 url reject
-^https?:\/\/www1.elecfans.com\/www\/delivery\/ url reject
-
-# > 高德
-^https?:\/\/m5.amap.com\/ws\/valueadded\/ url reject
-
-# > 京东开屏广告（此条规则会影响京东比价显示，使其失效）
-^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=start url reject-dict
-^https?:\/\/api\.m\.jd.com\/client\.action\?functionId=queryMaterialAdverts url reject
-^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject
-^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=hotWords url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/jd_json.js
-^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=hotSearchTerms url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/jd_json.js
-
-# > 交行买单吧@HotKids
-^https?:\/\/creditcardapp\.bankcomm\.com\/mapp\/common\/queryGuidePageAds\.do$ url reject-200
-^https?:\/\/creditcardapp\.bankcomm\.com\/mapp\/common\/getPopAds\.do$ url reject-200
-
-# > 美团应用
-^https?:\/\/img\.meituan\.net\/(adunion|display|midas)\/\w+\.(gif|jpg|jpg\.webp)$ url reject
-^https?:\/\/(s3plus|flowplus)\.meituan\.net\/v\d\/\w+\/linglong\/\w+\.(gif|jpg|mp4) url reject
-^https?:\/\/p\d\.meituan\.net\/(bizad|wmbanner)\/\w+\.jpg url reject
-^https?:\/\/p\d\.meituan\.net\/movie\/\w+\.jpg\?may_covertWebp url reject
-^https?:\/\/img\.meituan\.net\/(bizad|brandCpt)\/\w+\.png url reject
-^https?:\/\/wmapi\.meituan\.com\/api\/v\d+\/loadInfo\? url reject
-^https?:\/\/wmapi\.meituan\.com\/api\/v\d\/startpicture url reject
-^https?:\/\/www\.meituan\.com\/api\/v\d\/appstatus\?ad url reject
-
-# > 小红书开屏广告@chouchoui
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v2\/system_service\/splash_config url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/xiaohongshu.ad.js
-^https:\/\/www\.xiaohongshu\.com\/api\/sns\/v1\/ads\/apple\/record* url reject
-^https:\/\/www\.xiaohongshu\.com\/api\/sns\/v1\/tag\/ads_engage* url reject
-^https:\/\/www\.xiaohongshu\.com\/api\/sns\/v1\/ads\/resource* url reject
-^https:\/\/pages\.xiaohongshu\.com\/data\/native\/matrix_switches* url reject
-
-# > 小米
-^https?:\/\/api.jr.mi.com\/v1\/adv\/ url reject
-^https?:\/\/api.m.mi.com\/.+\/app\/start url reject
-
-# > 闲鱼
-^https:\/\/gw.alicdn.com\/mt\/ url reject
-^https:\/\/gw.alicdn.com\/tfs\/.+\d{3,4}-\d{4} url reject
-^https:\/\/gw.alicdn.com\/tps\/.+\d{3,4}-\d{4} url reject
 
 # Redirect no allowed
 # ^https?:\/\/(www.)?zhihu\.com url 302 https://yishangfei.github.io?content=知乎
