--- a/QuantumultX/Rewrite/General.conf
+++ b/QuantumultX/Rewrite/General.conf
@@ -7,7 +7,7 @@ hostname = www.google.cn, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip
 ^https?:\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
 
 # FileBall挂载阿里云盘
-^https?:\/\/.*\.example\.com url script-analyze-echo-response https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/ali.js
+^https?:\/\/.*\.example\.com url script-analyze-echo-response https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/ali.js
 
 # 微博去广告以及去除各部分推广模块 - cherish
 ^https?://m?api\.weibo\.c(n|om)/2/(cardlist|searchall|page|messageflow|statuses/(unread_)?friends(/|_)timeline|groups/timeline|statuses/(container_timeline|unread_hot_timeline|extend|video_mixtimeline|unread_topic_timeline)|profile/(me|container_timeline)|video/(community_tab|remind_info|tiny_stream_video_list)|checkin/show|\!/live/media_homelist|comments/build_comments|container/get_item|search/(finder|container_timeline|container_discover)) url script-response-body https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Script/weibo_main.js
