--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -1,16 +1,13 @@
-# >通用设置
 [General]
 # IPv6 支持
 ipv6 = false
 # > 跳过某个域名或者IP段
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,localhost,*.local,passenger.t3go.cn,passenger.t3go.cn
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, passenger.t3go.cn,passenger.t3go.cn
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 # DNS 服务器
-dns-server = system,119.29.29.29,114.114.114.114,223.5.5.5
-# DOH 服务器
-# doh-server = https://125397.alidns.com/dns-query
+dns-server = system,223.5.5.5,119.29.29.29
+doh-server = https://dns.alidns.com/dns-query
 # Wi-Fi 访问
-# > 允许 Wi-Fi 网络下其它设备访问
 allow-udp-proxy = false
 allow-wifi-access = false
 wifi-access-http-port = 7890
@@ -32,27 +29,28 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/bac
 
 # >机场订阅
 [Remote Proxy]
-iQZone = https://gist.githubusercontent.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Telecom.png
+iQZone = https://gist.githubusercontent.com/,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Telecom.png
 
 # >策略组
 [Proxy Group]
-♻️ 自动选择 = url-test,🇭🇰 香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,url = http://www.gstatic.com/generate_204,interval = 300,tolerance = 100,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
-🔮 负载均衡 = load-balance,🇭🇰 香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Round_Robin.png
-🚀 节点选择 = select,♻️ 自动选择,🔮 负载均衡,DIRECT,🇭🇰 香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
-📟 电报消息 = select,♻️ 自动选择,Other,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
-💰 PayPal = select,♻️ 自动选择,🇺🇸 美国,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
-🍎 苹果服务 = select,♻️ 自动选择,DIRECT,🇺🇸 美国,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-⛔️ 全球拦截 = select,REJECT,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hijacking.png
-🦈 漏网之鱼 = select,♻️ 自动选择,🚀 节点选择,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
+自动选择 = url-test,iQZone,url = http://www.gstatic.com/generate_204,interval = 1800,tolerance = 30,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
+节点选择 = select,自动选择,香港,日本,其他,Other,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
+Global = select,节点选择,img-url = img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+Telegram = select,节点选择,新加坡,img-url = img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
+Apple = select,DIRECT,节点选择,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+IP归属地 = select,DIRECT,iQZone,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Lab.png
+Emby = select,DIRECT,节点选择,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
+PayPal = select,节点选择,美国,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
+漏网之鱼 = select,节点选择,DIRECT,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
 # >筛选订阅节点
 [Remote Filter]
-# >通过正则方式筛选
-🇭🇰 香港 = NameRegex,iQZone, FilterKey = "香港|HK|中港|沪港"
-🇨🇳 台湾 = NameRegex,iQZone, FilterKey = "台湾|TW"
-🇯🇵 日本 = NameRegex,iQZone, FilterKey = "日本|JP"
-🇺🇸 美国 = NameRegex,iQZone, FilterKey = "美国|US"
-Other = NameRegex,iQZone, FilterKey = "^(?!.*(HK|JP|US|TW|香港|日本|台湾|美国|中港|沪港)).*$"
+香港 = NameRegex,iQZone, FilterKey = "香港|HK|中港|沪港"
+台湾 = NameRegex,iQZone, FilterKey = "台湾|TW"
+日本 = NameRegex,iQZone, FilterKey = "日本|JP"
+美国 = NameRegex,iQZone, FilterKey = "美国|US"
+新加坡 = NameRegex,iQZone, FilterKey = "新加坡|Singapore"
+其他 = NameRegex,iQZone, FilterKey = "泰国|越南"
 
 # >本地分流规则
 [Rule]
