--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -63,20 +63,15 @@ FINAL,🦈 漏网之鱼
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Global/Global.list, policy=♻️ 自动选择, tag=🌍 Global, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/GlobalMedia/GlobalMedia.list, policy=♻️ 自动选择, tag=🌍 GlobalMedia, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/GlobalMedia/GlobalMedia_Domain.list, policy=♻️ 自动选择, tag=🌍 GlobalMedia_Domain, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/China/China.list, policy=DIRECT, tag=🎯 国内网站-直连, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/ChinaMax/ChinaMax.list, policy=DIRECT, tag=🎯 ChinaMax, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/ChinaMax/ChinaMax_Domain.list, policy=DIRECT, tag=🎯 ChinaMax_Domain, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=🎯 中国-直连, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=🎯 中国IP-直连, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=💬 微信-直连, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest-直连, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Apple/Apple.list, policy=DIRECT, tag=🍎 Apple, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/AppleNews/AppleNews.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/FitnessPlus/FitnessPlus.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/AppleProxy/AppleProxy.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Telegram/Telegram.list, policy=📟 Telegram, tag=📟 Telegram, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, policy=💰 PayPal, tag=💰 PayPal, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Hijacking/Hijacking.list, policy=⛔️ 全球拦截, tag=⛔️ 全球拦截, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Privacy/Privacy.list, policy=⛔️ 全球拦截, tag=⛔️ 全球拦截, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Telegram.list, policy=Telegram, tag=📟 Telegram, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, policy=PayPal, tag=💰 PayPal, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Hijacking/Hijacking.list, policy=REJECT, tag=⛔️ 全球拦截, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Privacy/Privacy.list, policy=REJECT, tag=⛔️ 全球拦截, enabled=true
 
 # >本地URL复写
 [URL Rewrite]
@@ -95,9 +90,15 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon
 # >插件(类似Surge的模块)
 [Plugin]
 https://raw.githubusercontent.com/VirgilClyne/VirgilClyne/main/modules/DNS/DNS.plugin, tag=🌐DNS, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/General.plugin, tag=🌐General Settings Enhanced, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Location.plugin,tag=📍定位服务, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Siri.plugin,tag=🔍Siri与搜索, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Loon-Gallery/master/loon-gallery.plugin, tag=🎈Gallery, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJS, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Sub-Store订阅, enabled=true
+https://raw.githubusercontent.com/deezertidal/private/main/startingad.plugin, tag=APP启动页去广告, enabled=true
+https://raw.githubusercontent.com/deezertidal/private/main/bili.plugin, tag=Bilibili解锁高清画质, enabled=true
+https://raw.githubusercontent.com/deezertidal/private/main/biliad.plugin, tag=Bilibili去广告, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Advertising/Advertising.plugin, tag=重写去广告, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Redirect/Redirect.plugin, tag=重定向, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_lite.lnplugin, tag=知乎助手_去广告, enabled=true
